# arbol

./: CMakeLists.txt  README.md  gitignore  insertarDesordenArbol.csv  insertarDesordenSet.csv  insertarDesordenUnset.csv  insertarDesordenVector.csv  insertarOrdenArbol.csv  insertarOrdenSet.csv  insertarOrdenUnset.csv  insertarOrdenVector.csv  readme.md  reporte.md
include/: BST.hh  ExperimentoContiene.hh  ExperimentoInsertar.hh
src/: BST.cpp  CMakeLists.txt  ExperimentoContiene.cpp  ExperimentoInsertar.cpp  main.cpp
tests/: BST_test.cc  CMakeLists.txt
